add sections and styles

--- a/index.css
+++ b/index.css
@@ -1,5 +1,28 @@
 .navbar {
     display: flex;
     border: 1px solid red;
-    color: gray;
+    background-color: gray;
+}
+.nav-list {
+    list-style: none; 
+}
+.nav-list a{
+    text-decoration: none;
+}
+.nav-list li {
+    display: inline;
+    padding: 8px;
+}
+.hero-container {
+    border: 2px solid green;
+    background-color: dodgerblue;
+    color: white;
+    padding: 10px;
+    height: 700px;
+}
+
+.project {
+    border: 2px solid yellow;
+    background-color: aquamarine;
+    padding: 10px;
 }
