--- a/index.css
+++ b/index.css
@@ -7,7 +7,6 @@ body {
 .navbar {
     display: flex;
     justify-content: flex-end;
-    /* border: 1px solid red; */
     background-color: #403b3b;
     position: fixed;
     top: 0;
@@ -44,6 +43,7 @@ body {
     text-transform: uppercase;
     font-size: 2.8em;
     font-weight: 400;
+    color: white;
 }
 .brief-intro p {
     font-size: 1.5em;
@@ -87,10 +87,9 @@ body {
     /* background-image: url('http://ak9.picdn.net/shutterstock/videos/7610479/thumb/1.jpg'); */
     background-image: url('./assets/hero_background.jpg');
     background-size: cover;
-    background-position: center;
+    /* background-position: center; */
 }
 .intro {
-    /* border: 3px solid #f8c119; */
     padding: 20px;
     line-height: 1.7;
     text-align: left;
@@ -117,8 +116,6 @@ body {
     color: #ffcb08;
 } */
 .project {
-    /* border: 2px solid yellow; */
-    /* background-color: aquamarine; */
     padding: 10px;
     display: flex;
     justify-content: center;
@@ -136,14 +133,14 @@ body {
 }
 
 .img-container {
-    width: 100%;
+    max-width: 90%;
 }
 .project-img {
-    /* max-width: 100%; */
+    max-width: 100%;
     border: 3px solid white;
-    width: 450px;
-    max-width: 100%; 
-    max-height: 450px;
+    /* width: 450px; */
+    /* max-width: 80%; 
+    max-height: 80%; */
     border: 3px solid #8a8585;
 }
 .projects-heading, .about-container h2 {
@@ -161,7 +158,6 @@ body {
     /* max-width: 50%; */
 }
 .project-details a {
-    /* border: 2px solid #ffcb08; */
     border: 2px solid #319bde;
     text-decoration: none;
     padding: 5px;
@@ -184,7 +180,6 @@ body {
 .footer-container {
     text-align: center;
     background-color: #403b3b;
-    /* background-image: url('./assets/background.png'); */
     padding: 20px;
     color: white;
     text-transform: uppercase;
