--- a/index.css
+++ b/index.css
@@ -92,7 +92,7 @@ body {
     padding: 10px;
     height: 100vh;
     text-align: center;
-    background-image: url('./assets/hero_bg.jpeg');
+    background-image: url('./assets/hero_img.jpg');
     background-size: cover;
 
     background-position: center;
